code properly simulating a ligretto game